Update Tablet-Large.css to correct alignment and positioning of elements, enhancing layout consistency and user interface responsiveness.

--- a/Tablet-Large.css
+++ b/Tablet-Large.css
@@ -24,7 +24,7 @@
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
         font-weight: 400;
         line-height: 20px;
-        align-items:first baseline;
+        align-items: center;
         text-align: center;
         gap: 3.5px;
     }
@@ -35,8 +35,8 @@
         width: 16px;
         font-size: 11px;
         height: 16px;
-        top: -1px;
         align-items: center;
+        top: 1px;
         justify-content: center;
         flex-direction: column;
         border: 1px solid #9198a1;
